petstore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petstore
  namespace: dev
spec:
  selector:
    app: petstore
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
