petstore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petstore
  namespace: dev
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: petstore
            port:
              number: 8080
